--- a/index.html
+++ b/index.html
@@ -125,20 +125,20 @@
                 <p>Não deixe de conferir o nosso Plano de Patrocínio!</p>
 
 
-                <button>
-                    <a href="https://drive.google.com/file/d/1mpw3NoA-tizdEWYbKxWLciw9cm0TgZ9X/view?usp=share_link">Baixar
+                <div class="c4p">
+                    <a href="https://drive.google.com/file/d/1mpw3NoA-tizdEWYbKxWLciw9cm0TgZ9X/view?usp=share_link" target="_blank" class="btn-c4p">Baixar
                         o
                         PDF</a>
-                </button>
+                </div>
             </section>
             <section lang="en-us" class="patrocinio-texto">
                 <h3>Become a sponsor of Python Nordeste</h3>
                 <p>Check out our Sponsorship Plan!</p>
 
-                <button>
-                    <a href="https://drive.google.com/file/d/17qei9Stdsef0Sxz8pZvYFZD6JmY85gKN/view">Download PDF file
+                <div class="c4p">
+                    <a href="https://drive.google.com/file/d/17qei9Stdsef0Sxz8pZvYFZD6JmY85gKN/view" target="_blank" class="btn-c4p">Download PDF file
                     </a>
-                </button>
+                </div>
             </section>
 
         </div>
