Atualizando a tag section para a tag article na class intro

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </section>
     </header>
     <main>
-        <section class="intro" id="intro">
+        <article class="intro" id="intro">
             <div class="intro--descricao">
                 <h2>Conheça mais sobre a cidade-sede da PyNE 2023!</h2>
                 <section class="intro-cidade">
@@ -108,7 +108,7 @@
                     </p>
                 </section>
             </div>
-        </section>
+        </article>
         <div class="sponsor">
             <h2>Seja uma patrocinadora da Python Nordeste</h2>
             <div class="patrocinio--section" id="patrocinio">
