--- a/index.html
+++ b/index.html
@@ -86,30 +86,20 @@
                         cidade da Bahia.
                     </p>
                     <p>
-                        Considerada o centro da cultura afro-brasileira no Brasil. O território soteropolitano possui belas
-                        paisagens geográficas, e se beneficia de características muito específicas. Tem um clima quente e
-                        ensolarado o ano todo; a beleza natural de praias, como Ondina, Arembepe, Farol da Barra, Amaralina,
-                        e de lagoas, como a do Abaeté; as manifestações variadas da cultura negra, como a rica e saborosa
-                        culinária, música e ritmos revolucionários, sincretismo religioso, terreiros de candomblé e
-                        exibições de capoeira - tudo relacionado com o respeito, preservação e reverência à ancestralidade
-                        de seu povo!
+                        Considerada o centro da cultura afro-brasileira no Brasil. O território soteropolitano possui belas paisagens geográficas, e se beneficia de características muito específicas. Tem um clima quente e ensolarado o ano todo; a beleza natural de praias, como Ondina, Arembepe, Farol da Barra, Amaralina, e de lagoas, como a do Abaeté; as manifestações variadas da cultura negra, como a rica e saborosa culinária, música e ritmos revolucionários, sincretismo religioso, terreiros de candomblé e exibições de capoeira - tudo relacionado com o respeito, preservação e reverência à ancestralidade de seu povo!
                     </p>
                     <p>
-                        Há ainda um belo conjunto arquitetônico remanescentes da época da colonização que representa um
-                        pedaço vivo da história do Brasil. A cidade registra manifestações culturais e religiosas
-                        importantes, sendo conhecida, pelos festejos do Senhor do Bonfim, Iemanjá, Carnaval e Ano Novo.
+                        Há ainda um belo conjunto arquitetônico remanescentes da época da colonização que representa um pedaço vivo da história do Brasil. A cidade registra manifestações culturais e religiosas importantes, sendo conhecida, pelos festejos do Senhor do Bonfim, Iemanjá, Carnaval e Ano Novo.
                         </br>
                     </p>
                     <p>
-                        Predominam em Salvador as atividades de serviços, turismo e comércio, mas é marcante o crescimento
-                        da industrialização e tecnologia nomeada como uma das cidades inteligentes do Nordeste. Ficou em
-                        primeiro lugar do Nordeste no Ranking Connected Smart Cities, que aponta as cidades mais conectadas
+                        Predominam em Salvador as atividades de serviços, turismo e comércio, mas é marcante o crescimento da industrialização e tecnologia nomeada como uma das cidades inteligentes do Nordeste. Ficou em primeiro lugar do Nordeste no Ranking Connected Smart Cities, que aponta as cidades mais conectadas
                         e inteligentes do País.
                     </p>
                 </section>
             </div>
         </article>
-        <div class="sponsor">
+        <article class="sponsor">
             <h2>Seja uma patrocinadora da Python Nordeste</h2>
             <div class="patrocinio--section" id="patrocinio">
                 <section lang="pt-br" class="patrocinio-texto">
@@ -130,7 +120,7 @@
                     </div>
                 </section>
             </div>
-        </div>
+        </article>
         <div class="localizacao">
             <section class="localizacao--texto">
                 <h2>Confira o local do evento</h2>
