--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 </section>
             </div>
         </article>
-        <div class="localizacao">
+        <article class="localizacao">
             <section class="localizacao--texto">
                 <h2>Confira o local do evento</h2>
                 <p>A PyNE 2023 será sediada na Escola Politécnica da UFBA <br>(Universidade Federal da Bahia) - Salvador</p>
@@ -132,7 +132,7 @@
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3887.56535363496!2d-38.512876424041686!3d-12.999628560375259!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x716049dd45f3533%3A0x6e449a7096d9e5e0!2sEscola%20Polit%C3%A9cnica%20da%20UFBA!5e0!3m2!1spt-BR!2sbr!4v1685062528945!5m2!1spt-BR!2sbr"
                 width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
+        </article>
     </main>
     <div class="social-media" id="social-media">
         <h3 class="social-media--text-center">
