feat:  adding Bronze sponsor logo

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
     <link rel="manifest" href="/favicon/site.webmanifest">
+
     <script>console.log("\nPython Nordeste 2023\n\nPessoas > Tecnologia\n✊🏿✊🏾✊🏽✊✊🏼✊🏻 🏳️‍🌈🏳️‍⚧️♿\n ")</script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-L0X42JQJ9N"></script>
@@ -59,12 +60,15 @@
     <nav class="navbar">
         <button><a id="logo" class="nav-link" href="#">Home</a></button>
         <button><a class="nav-link" href="#intro">Sobre a cidade</a></button>
-        <button><a class="nav-link" href="#patrocinio">Como patrocinar</a></button>
+        <button><a class="nav-link" href="#">Como patrocinar</a></button>
         <button><a class="nav-link" href="https://python.org.br/cdc/" target="_blank">Código de conduta</a></button>
         <button><a class="nav-link" href="#social-media">Redes sociais</a></button>
         <button><a class="nav-link" href="orientacoes.html">Orientações para a Covid-19</a></button>
 
+
     </nav>
+
+
     <header class="main">
         <img class="main-hero" src="./img/assets/FITINHAS_VOANDO.png"
             aria-label="Fitas voando escrito Python Nordeste 2023">
@@ -74,12 +78,14 @@
         </section>
         <section>
             <div class="c4p">
-                <a href="https://pretalx.com/python-nordeste-2023/cfp" target="_blank" class="btn-c4p">Submissão de atividades</a>
+                <a href="https://pretalx.com/python-nordeste-2023/cfp" target="_blank" class="btn-c4p">Submissão de
+                    atividades</a>
             </div>
             <div class="c4p">
-                <a href="https://pretalx.com/python-nordeste-2023/schedule/" target="_blank" class="btn-c4p">Cronograma do evento</a>
-            </div>      
-            </section>
+                <a href="https://pretalx.com/python-nordeste-2023/schedule/" target="_blank" class="btn-c4p">Cronograma
+                    do evento</a>
+            </div>
+        </section>
     </header>
     <section class="intro" id="intro">
         <div class="intro--descricao">
@@ -113,26 +119,41 @@
         </div>
     </section>
     <div class="sponsor">
-        <h2>Seja uma patrocinadora da Python Nordeste</h2>
-        <div class="patrocinio--section" id="patrocinio">
-            <section lang="pt-br" class="patrocinio-texto">
-                <h3>Junte-se a nós para construir este evento!</h3>
-                <p>Não deixe de conferir o nosso Plano de Patrocínio!</p>
-                <div class="c4p">
-                    <a href="https://drive.google.com/file/d/1mpw3NoA-tizdEWYbKxWLciw9cm0TgZ9X/view?usp=share_link" target="_blank" class="btn-c4p">Baixar
-                        o
-                        PDF</a>
-                </div>
-            </section>
-            <section lang="en-us" class="patrocinio-texto">
-                <h3>Become a sponsor of Python Nordeste</h3>
-                <p>Check out our Sponsorship Plan!</p>
-                <div class="c4p">
-                    <a href="https://drive.google.com/file/d/17qei9Stdsef0Sxz8pZvYFZD6JmY85gKN/view" target="_blank" class="btn-c4p">Download PDF file
-                    </a>
-                </div>
-            </section>
-        </div>
+        <section class="sponsor-callout">
+
+            <h2>Seja uma patrocinadora da Python Nordeste</h2>
+            <div class="--section" id="">
+                <section lang="pt-br" class="-texto">
+                    <h3>Junte-se a nós para construir este evento!</h3>
+                    <p>Não deixe de conferir o nosso Plano de Patrocínio!</p>
+                    <div class="c4p">
+                        <a href="https://drive.google.com/file/d/1mpw3NoA-tizdEWYbKxWLciw9cm0TgZ9X/view?usp=share_link"
+                            target="_blank" class="btn-c4p">Baixar
+                            o
+                            PDF</a>
+                    </div>
+                </section>
+                <section lang="en-us" class="-texto">
+                    <h3>Become a sponsor of Python Nordeste</h3>
+                    <p>Check out our Sponsorship Plan!</p>
+                    <div class="c4p">
+                        <a href="https://drive.google.com/file/d/17qei9Stdsef0Sxz8pZvYFZD6JmY85gKN/view" target="_blank"
+                            class="btn-c4p">Download PDF file
+                        </a>
+                    </div>
+                </section>
+            </div>
+        </section>
+
+        <section class="sponsors-list">
+            <h2>Confira as empresas patrocinadoras!</h2>
+
+            <div class="sponsors-list--bronze">
+
+                <h3>Bronze</h3>
+                <img src="./img/assets/globo.png" alt="Globo">
+            </div>
+        </section>
     </div>
     <div class="localizacao">
         <section class="localizacao--texto">
@@ -172,4 +193,5 @@
             22 a 24 de setembro de 2023 | Salvador - BA, Brasil | Feito com <3 pelos pythonistas nordestinos </small>
     </footer>
 </body>
-</html>
+
+</html> -->
