Fiz a remoção de conflitos da página index.html, atualizei o link da nav 'como patrocinar' adicionando o 'id='sponsor' ao article classe='sponsor', também adicionei um padding-top: 3rem; para que o usuario consiga ver toda a seção de patrocinio ao cliclar no botão. Atualizei também algumas classes que estavam quebrando o site na main

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <nav class="navbar">
         <button><a id="logo" class="nav-link" href="#">Home</a></button>
         <button><a class="nav-link" href="#intro">Sobre a cidade</a></button>
-        <button><a class="nav-link" href="#">Como patrocinar</a></button>
+        <button><a class="nav-link" href="#sponsor">Como patrocinar</a></button>
         <button><a class="nav-link" href="https://python.org.br/cdc/" target="_blank">Código de conduta</a></button>
         <button><a class="nav-link" href="#social-media">Redes sociais</a></button>
         <button><a class="nav-link" href="orientacoes.html">Orientações para a Covid-19</a></button>
@@ -104,10 +104,10 @@
                 </section>
             </div>
         </article>
-        <article class="sponsor">
+        <article class="sponsor" id="sponsor">
             <h2>Seja uma patrocinadora da Python Nordeste</h2>
-            <div class="patrocinio--section" id="patrocinio">
-                <section lang="pt-br" class="patrocinio-texto">
+            <div class="sponsor--section">
+                <section lang="pt-br" class="sponsor-texto">
                     <h3>Junte-se a nós para construir este evento!</h3>
                     <p>Não deixe de conferir o nosso Plano de Patrocínio!</p>
                     <div class="c4p">
