Adicionando seção de Apoiadores na página

--- a/index.html
+++ b/index.html
@@ -131,11 +131,15 @@
 
         <article class="sponsors-list">
             <h2>Confira as empresas patrocinadoras!</h2>
-
             <div class="sponsors-list--bronze">
-
                 <h3>Bronze</h3>
-                <img src="./img/assets/globo.png" alt="Globo">
+                <img src="./img/assets/globo.png" alt="Globo"/>
+            </div>
+            <div class="sponsors-list--apoiadores">
+                <h3>Apoiadores</h3>
+                <img src="./img/assets/ufba.png" alt="UFBA"/>
+                <img src="./img/assets/naep.png" alt="NAEP"/>
+                <img src="./img/assets/gamma-ufba.png" alt="GAMMA">
             </div>
         </article>
         <article class="localizacao">
