--- a/index.html
+++ b/index.html
@@ -137,9 +137,11 @@
             </div>
             <div class="sponsors-list--apoiadores">
                 <h3>Apoiadores</h3>
-                <img src="./img/assets/ufba.png" alt="UFBA"/>
-                <img src="./img/assets/naep.png" alt="NAEP"/>
-                <img src="./img/assets/gamma-ufba.png" alt="GAMMA">
+                <div class="sponsors-flex">
+                    <img src="./img/assets/ufba.png" alt="UFBA"/>
+                    <img src="./img/assets/naep.png" alt="NAEP"/>
+                    <img src="./img/assets/gamma-ufba.png" alt="GAMMA">
+                </div>
             </div>
         </article>
         <article class="localizacao">
