--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     ✊🏿✊🏾✊🏽✊✊🏼✊🏻 🏳️‍🌈🏳️‍⚧️♿
 -->
 <html lang="pt-BR" xmlns="http://www.w3.org/1999/html">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -53,6 +54,7 @@
         gtag('config', 'G-L0X42JQJ9N');
     </script>
 </head>
+
 <body>
     <nav class="navbar">
         <button><a id="logo" class="nav-link" href="#">Home</a></button>
@@ -72,8 +74,10 @@
         </section>
         <section>
             <div class="c4p">
-                <a href="https://pretalx.com/python-nordeste-2023/cfp" target="_blank" class="btn-c4p">Submissão de
-                    atividades</a>
+                <a href="https://www.eventbrite.com.br/e/python-nordeste-2023-tickets-685066200447 " target="_blank"
+                    class="btn-subscriptions">
+                    Inscreva-se já!
+                </a>
             </div>
             <div class="c4p">
                 <a href="https://pretalx.com/python-nordeste-2023/schedule/" target="_blank" class="btn-c4p">Cronograma
@@ -91,14 +95,25 @@
                         A PyNE este ano será sediada em Salvador, capital e maior cidade da Bahia.
                     </p>
                     <p>
-                        Considerada o centro da cultura afro-brasileira no Brasil. O território soteropolitano possui belas paisagens geográficas, e se beneficia de características muito específicas. Tem um clima quente e ensolarado o ano todo; a beleza natural de praias, como Ondina, Arembepe, Farol da Barra, Amaralina, e de lagoas, como a do Abaeté; as manifestações variadas da cultura negra, como a rica e saborosa culinária, música e ritmos revolucionários, sincretismo religioso, terreiros de candomblé e exibições de capoeira - tudo relacionado com o respeito, preservação e reverência à ancestralidade de seu povo!
+                        Considerada o centro da cultura afro-brasileira no Brasil. O território soteropolitano possui
+                        belas paisagens geográficas, e se beneficia de características muito específicas. Tem um clima
+                        quente e ensolarado o ano todo; a beleza natural de praias, como Ondina, Arembepe, Farol da
+                        Barra, Amaralina, e de lagoas, como a do Abaeté; as manifestações variadas da cultura negra,
+                        como a rica e saborosa culinária, música e ritmos revolucionários, sincretismo religioso,
+                        terreiros de candomblé e exibições de capoeira - tudo relacionado com o respeito, preservação e
+                        reverência à ancestralidade de seu povo!
                     </p>
                     <p>
-                        Há ainda um belo conjunto arquitetônico remanescentes da época da colonização que representa um pedaço vivo da história do Brasil. A cidade registra manifestações culturais e religiosas importantes, sendo conhecida, pelos festejos do Senhor do Bonfim, Iemanjá, Carnaval e Ano Novo.
+                        Há ainda um belo conjunto arquitetônico remanescentes da época da colonização que representa um
+                        pedaço vivo da história do Brasil. A cidade registra manifestações culturais e religiosas
+                        importantes, sendo conhecida, pelos festejos do Senhor do Bonfim, Iemanjá, Carnaval e Ano Novo.
                         </br>
                     </p>
                     <p>
-                        Predominam em Salvador as atividades de serviços, turismo e comércio, mas é marcante o crescimento da industrialização e tecnologia nomeada como uma das cidades inteligentes do Nordeste. Ficou em primeiro lugar do Nordeste no Ranking Connected Smart Cities, que aponta as cidades mais conectadas
+                        Predominam em Salvador as atividades de serviços, turismo e comércio, mas é marcante o
+                        crescimento da industrialização e tecnologia nomeada como uma das cidades inteligentes do
+                        Nordeste. Ficou em primeiro lugar do Nordeste no Ranking Connected Smart Cities, que aponta as
+                        cidades mais conectadas
                         e inteligentes do País.
                     </p>
                 </section>
@@ -111,7 +126,8 @@
                     <h3>Junte-se a nós para construir este evento!</h3>
                     <p>Não deixe de conferir o nosso Plano de Patrocínio!</p>
                     <div class="c4p">
-                        <a href="https://drive.google.com/file/d/1mpw3NoA-tizdEWYbKxWLciw9cm0TgZ9X/view?usp=share_link" target="_blank" class="btn-c4p">
+                        <a href="https://drive.google.com/file/d/1mpw3NoA-tizdEWYbKxWLciw9cm0TgZ9X/view?usp=share_link"
+                            target="_blank" class="btn-c4p">
                             Baixar o PDF
                         </a>
                     </div>
@@ -121,7 +137,8 @@
                     <h3>Become a sponsor of Python Nordeste</h3>
                     <p>Check out our Sponsorship Plan!</p>
                     <div class="c4p">
-                        <a href="https://drive.google.com/file/d/17qei9Stdsef0Sxz8pZvYFZD6JmY85gKN/view" target="_blank" class="btn-c4p">
+                        <a href="https://drive.google.com/file/d/17qei9Stdsef0Sxz8pZvYFZD6JmY85gKN/view" target="_blank"
+                            class="btn-c4p">
                             Download PDF file
                         </a>
                     </div>
@@ -133,13 +150,13 @@
             <h3>Confira as empresas patrocinadoras!</h3>
             <div class="sponsors-list--bronze">
                 <h3>Bronze</h3>
-                <img src="./img/assets/globo.png" alt="Globo"/>
+                <img src="./img/assets/globo.png" alt="Globo" />
             </div>
             <div class="sponsors-list--apoiadores">
                 <h3>Apoiadores</h3>
                 <div class="sponsors-flex">
-                    <img src="./img/assets/ufba.png" alt="UFBA"/>
-                    <img src="./img/assets/naep.png" alt="NAEP"/>
+                    <img src="./img/assets/ufba.png" alt="UFBA" />
+                    <img src="./img/assets/naep.png" alt="NAEP" />
                     <img src="./img/assets/gamma-ufba.png" alt="GAMMA">
                 </div>
             </div>
@@ -147,7 +164,8 @@
         <article class="localizacao">
             <section class="localizacao--texto">
                 <h2>Confira o local do evento</h2>
-                <p>A PyNE 2023 será sediada na Escola Politécnica da UFBA <br>(Universidade Federal da Bahia) - Salvador</p>
+                <p>A PyNE 2023 será sediada na Escola Politécnica da UFBA <br>(Universidade Federal da Bahia) - Salvador
+                </p>
                 <br>
                 <p>R. Prof. Aristídes Novis, 2 - Federação, Salvador - BA, 40210-630</p>
             </section>
@@ -163,27 +181,26 @@
             <ul>
                 <li>
                     <a href="mailto:nordeste@python.org.br" target="_blank" rel="noopener noreferrer">
-                        <img class="social-media--icons" src="./img/icons/EMAIL.svg" alt="Email"/>
+                        <img class="social-media--icons" src="./img/icons/EMAIL.svg" alt="Email" />
                         nordeste@python.org.br
                     </a>
                 </li>
-                <li> 
-                    <a href="https://www.instagram.com/pythonnordeste/" target="_blank"
-                    rel="noopener noreferrer">
-                        <img class="social-media--icons" src="./img/icons/INSTAGRAM.svg" alt="Instagram"/>
+                <li>
+                    <a href="https://www.instagram.com/pythonnordeste/" target="_blank" rel="noopener noreferrer">
+                        <img class="social-media--icons" src="./img/icons/INSTAGRAM.svg" alt="Instagram" />
                         @pythonnordeste
                     </a>
                 </li>
-                <li> 
+                <li>
                     <a href="https://twitter.com/pythonnordeste" target="_blank" rel="noopener noreferrer">
-                        <img class="social-media--icons" src="./img/icons/TWITTER.svg" alt="Twitter"/>
+                        <img class="social-media--icons" src="./img/icons/TWITTER.svg" alt="Twitter" />
                         @pythonnordeste
-                    </a> 
+                    </a>
                 </li>
                 <li>
                     <a href="https://www.linkedin.com/company/python-nordeste-2022/" target="_blank"
                         rel="noopener noreferrer">
-                        <img class="social-media--icons" src="./img/icons/LINKEDIN.svg" alt="Linkedin"/>
+                        <img class="social-media--icons" src="./img/icons/LINKEDIN.svg" alt="Linkedin" />
                         /PythonNordeste
                     </a>
                 </li>
