--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
     <link rel="manifest" href="/favicon/site.webmanifest">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/iconoir-icons/iconoir@main/css/iconoir.css">
 
     <script>console.log("\nPython Nordeste 2023\n\nPessoas > Tecnologia\n✊🏿✊🏾✊🏽✊✊🏼✊🏻 🏳️‍🌈🏳️‍⚧️♿\n ")</script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -56,13 +57,15 @@
 </head>
 
 <body>
-    <nav class="navbar">
-        <button><a id="logo" class="nav-link" href="#">Home</a></button>
-        <button><a class="nav-link" href="#intro">Sobre a cidade</a></button>
-        <button><a class="nav-link" href="#sponsor">Como patrocinar</a></button>
-        <button><a class="nav-link" href="https://python.org.br/cdc/" target="_blank">Código de conduta</a></button>
-        <button><a class="nav-link" href="#social-media">Redes sociais</a></button>
-        <button><a class="nav-link" href="orientacoes.html">Orientações para a Covid-19</a></button>
+    <nav class="navbar" id="navbar">
+        <a class="nav-link" href="#">Home</a>
+        <a class="nav-link" href="#intro">Sobre a cidade</a>
+        <a class="nav-link" href="#sponsor">Como patrocinar</a>
+        <a class="nav-link" href="https://python.org.br/cdc/" target="_blank">Código de conduta</a>
+        <a class="nav-link" href="#social-media">Redes sociais</a>
+        <a class="nav-link" href="orientacoes.html">Orientações para a Covid-19</a>
+        <a class="icon" href="javascript:void(0);" onclick="myFunction()"><img src="/img/icons/menu-mobile.svg"
+                class="iconoir-menu"></img></a>
     </nav>
 
     <header class="main">
@@ -95,24 +98,30 @@
                         A PyNE este ano será sediada em Salvador, capital e maior cidade da Bahia.
                     </p>
                     <p>
-                        Considerada o centro da cultura afro-brasileira no Brasil. O território soteropolitano possui
-                        belas paisagens geográficas, e se beneficia de características muito específicas. Tem um clima
+                        Considerada o centro da cultura afro-brasileira no Brasil. O território soteropolitano
+                        possui
+                        belas paisagens geográficas, e se beneficia de características muito específicas. Tem um
+                        clima
                         quente e ensolarado o ano todo; a beleza natural de praias, como Ondina, Arembepe, Farol da
                         Barra, Amaralina, e de lagoas, como a do Abaeté; as manifestações variadas da cultura negra,
                         como a rica e saborosa culinária, música e ritmos revolucionários, sincretismo religioso,
-                        terreiros de candomblé e exibições de capoeira - tudo relacionado com o respeito, preservação e
+                        terreiros de candomblé e exibições de capoeira - tudo relacionado com o respeito,
+                        preservação e
                         reverência à ancestralidade de seu povo!
                     </p>
                     <p>
-                        Há ainda um belo conjunto arquitetônico remanescentes da época da colonização que representa um
+                        Há ainda um belo conjunto arquitetônico remanescentes da época da colonização que representa
+                        um
                         pedaço vivo da história do Brasil. A cidade registra manifestações culturais e religiosas
-                        importantes, sendo conhecida, pelos festejos do Senhor do Bonfim, Iemanjá, Carnaval e Ano Novo.
+                        importantes, sendo conhecida, pelos festejos do Senhor do Bonfim, Iemanjá, Carnaval e Ano
+                        Novo.
                         </br>
                     </p>
                     <p>
                         Predominam em Salvador as atividades de serviços, turismo e comércio, mas é marcante o
                         crescimento da industrialização e tecnologia nomeada como uma das cidades inteligentes do
-                        Nordeste. Ficou em primeiro lugar do Nordeste no Ranking Connected Smart Cities, que aponta as
+                        Nordeste. Ficou em primeiro lugar do Nordeste no Ranking Connected Smart Cities, que aponta
+                        as
                         cidades mais conectadas
                         e inteligentes do País.
                     </p>
@@ -148,12 +157,13 @@
 
         <article class="sponsors-list bg-white">
             <h3>Confira as empresas patrocinadoras!</h3>
-            <div class="sponsors-list--bronze">
-                <h3>Bronze</h3>
+            <h4>Bronze</h4>
+            <div class="sponsors-list__bronze">
                 <img src="./img/assets/globo.png" alt="Globo" />
+                <img src="./img/assets/vinta.png" alt="Vinta" />
             </div>
-            <div class="sponsors-list--apoiadores">
-                <h3>Apoiadores</h3>
+            <div class="sponsors-list__apoiadores">
+                <h4>Apoiadores</h4>
                 <div class="sponsors-flex">
                     <img src="./img/assets/ufba.png" alt="UFBA" />
                     <img src="./img/assets/naep.png" alt="NAEP" />
@@ -164,7 +174,8 @@
         <article class="localizacao">
             <section class="localizacao--texto">
                 <h2>Confira o local do evento</h2>
-                <p>A PyNE 2023 será sediada na Escola Politécnica da UFBA <br>(Universidade Federal da Bahia) - Salvador
+                <p>A PyNE 2023 será sediada na Escola Politécnica da UFBA <br>(Universidade Federal da Bahia) -
+                    Salvador
                 </p>
                 <br>
                 <p>R. Prof. Aristídes Novis, 2 - Federação, Salvador - BA, 40210-630</p>
@@ -211,6 +222,7 @@
         <small class="footer--note">
             22 a 24 de setembro de 2023 | Salvador - BA, Brasil | Feito com <3 pelos pythonistas nordestinos </small>
     </footer>
+    <script src="js/scripts.js"></script>
 </body>
 
 </html>
