fix: ajustes no menu responsivo

--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
         <a class="nav-link" href="https://python.org.br/cdc/" target="_blank">Código de conduta</a>
         <a class="nav-link" href="#social-media">Redes sociais</a>
         <a class="nav-link" href="orientacoes.html">Orientações para a Covid-19</a>
-        <a class="icon" href="javascript:void(0);" onclick="myFunction()"><img src="/img/icons/menu-mobile.svg"
-                class="iconoir-menu"></img></a>
+        <a class="icon" href="javascript:void(0);" onclick="myFunction()"><i class="iconoir-menu"></i></a>
     </nav>
 
     <header class="main">
