feat: criando página do CdC para atender à demanda da PSF

--- a/cdc.html
+++ b/cdc.html
@@ -76,33 +76,51 @@
     </nav>
 
     <header class="main">
+        <section class="main-chamada">
         <img class="main-hero" src="./img/assets/FITINHAS_VOANDO.png"
             aria-label="Fitas voando escrito Python Nordeste 2023">
         <section class="main-chamada">
-
             <img class="main-logo" src="./img/assets/LOGO.png" alt="logo da python nordeste">
             <p class="main--descricao-callout">22 a 24 de setembro de 2023
             </p>
         </section>
+       </section>s
     </header>
 
 
     <section class="intro orientacoes" id="intro">
         <div class="intro--descricao">
-            <section class="intro--orientacoes">
-                <h2>Orientações sobre a Covid-19</h2>
-            </section>
+                <h2>Código de Conduta da Python Nordeste</h2>
             <section class="intro-cidade">
-                <p>
-                    Será obrigatória a apresentação do comprovante de vacinação, e todas as pessoas participantes,
-                    organização, palestrantes e pessoas membras do CdC. Procuramos priorizar os cuidados com a saúde
-                    seguindo as orientações e diretrizes da Organização Mundial da Saúde e das autoridades locais
-                    competentes.
+            <p>
+                A Python Nordeste visa garantir um espaço seguro para trocas de conhecimento através do esforço ativo em busca da pluralidade, inclusão e acolhimento. Para tanto, precisamos ter regras claras em assegurar o respeito por todas as pessoas envolvidas na PyNE. O Código de Conduta é aplicável para a Organização, Empresas Patrocinadoras, Palestrantes e Ministrantes de Atividades, Participantes, Fornecedores e Apoiadoras.
+            </p>
+            <p>
+                Por isso: <br><br>
+                        1- Não é tolerado nenhum tipo de assédio, perseguição ou humilhação pública; <br>
+                        2- Não é tolerado o descumprimento das leis brasileiras; <br>
+                        3- Toda pessoa presente no evento, independente do seu papel, está sujeita a estas regras; <br>
                 </p>
-                <p>
-                    Procure saber sobre a disponibilidade de tomar a vacina bivalente (contra gripe e Covid-19) através
-                    do aplicativo Conecte SUS: é gratuito e disponível para todos os sistemas operacionais móveis. </br>
-                </p>
+            <p>
+                Desta forma, entendemos que:<br><br>
+
+                1- Assédio é a ação de insistir, perseguir ou coagir outra pessoa a um comportamento involuntário.  <br>
+                2- Discriminação inapropriada é o ato de separar, injuriar ou humilhar alguém promovendo sua exclusão por atributo particular da mesma.  <br>
+                3- Humilhação pública é o ato de submeter, rebaixar, ridicularizar ou promover o vexame de outro publicamente.  <br>
+                4- O público-alvo do evento também inclui crianças e adolescentes, por isso buscamos manter um ambiente apropriado para todas as faixas etárias. Sendo assim, linguagem e imagens sexualizadas não são adequados para palestras e ações promocionais de patrocinadores.  <br>
+            </p>
+            <p>
+                Se você se sentiu assediada(o), perseguida(o) ou humilhado(o), ou presenciou alguma destas atitudes, por favor entre em contato com a <a href="mailto:nordeste@python.org.br">Equipe de Resposta do Código de Conduta.</a>.
+            </p>
+            <p>
+                Havendo um relato de violação destes princípios, a Equipe de Resposta realizará a devida análise e, quando necessário, tomará as ações para impedir a reincidência. Estas ações podem, mas não se restringem nem implicam em ir desde uma conversa em busca da retratação até um convite a se retirar do evento por tempo indeterminado.
+            </p>
+            <p class="text-center">
+                O Código de Conduta acima foi baseado na versão desenvolvida pela Python Brasil & APyB (Associação Python Brasil).
+                <a href="https://python.org.br/cdc/" class="padrao">
+                    PYTHON BRASIL CoC
+                </a>
+            </p>
             </section>
 
         </div>
