--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <a class="nav-link" href="#">Home</a>
         <a class="nav-link" href="#intro">Sobre a cidade</a>
         <a class="nav-link" href="#sponsor">Como patrocinar</a>
-        <a class="nav-link" href="https://python.org.br/cdc/" target="_blank">Código de conduta</a>
+        <a class="nav-link" href="cdc.html" target="_blank">Código de conduta</a>
         <a class="nav-link" href="#social-media">Redes sociais</a>
         <a class="nav-link" href="orientacoes.html">Orientações para a Covid-19</a>
         <a class="icon" href="javascript:void(0);" onclick="myFunction()"><i class="iconoir-menu"></i></a>
