fix: incluindo o script do menu

--- a/orientacoes.html
+++ b/orientacoes.html
@@ -137,6 +137,7 @@
         <small class="footer--note">
             22 a 24 de setembro de 2023 | Salvador - BA, Brasil | Feito com <3 pelos pythonistas nordestinos </small>
     </footer>
+    <script src="js/scripts.js"></script>
 </body>
 
 </html>
