feat: adicionando a logo da Elastic

--- a/index.html
+++ b/index.html
@@ -156,6 +156,10 @@
 
         <article class="sponsors-list bg-white">
             <h3>Confira as empresas patrocinadoras!</h3>
+            <h4>Ouro</h4>
+            <div class="sponsors-list__ouro">
+                <img src="./img/assets/elastic.png" alt="Elastic" />
+            </div>
             <h4>Bronze</h4>
             <div class="sponsors-list__bronze">
                 <img src="./img/assets/globo.png" alt="Globo" />
