--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 <body>
     <nav class="navbar" id="navbar">
-        <a class="nav-link" href="#">Home</a>
+        <a class="nav-link" href="#"></a><img class="nav-logo" src="./img/assets/LOGO.png" alt=""></a>
         <a class="nav-link" href="#intro">Sobre a cidade</a>
         <a class="nav-link" href="#sponsor">Como patrocinar</a>
         <a class="nav-link" href="cdc.html" target="_blank">Código de conduta</a>
@@ -67,14 +67,13 @@
         <a class="icon" href="javascript:void(0);" onclick="myFunction()"><i class="iconoir-menu"></i></a>
     </nav>
 
-    <header class="main">
-        <img class="main-hero" src="./img/assets/FITINHAS_VOANDO.png"
+    <header class="header">
+        <img class="header--hero" src="./img/assets/poli-atual.jpg"
             aria-label="Fitas voando escrito Python Nordeste 2023">
-        <section class="main-chamada">
-            <img class="main-logo" src="./img/assets/LOGO.png" alt="">
-            <p class="main--descricao-callout">22 a 24 de setembro de 2023</p>
-        </section>
-        <section>
+        <div class="header--intro">
+            <h1 class="main--descricao-callout">22 a 24 de setembro de 2023</h1>
+            <p><b>Escola Politécnica da UFBA - R. Prof. Aristídes Novis, 2 - Federação, Salvador - BA, 40210-630
+                </b></p>
             <div class="c4p">
                 <a href="https://www.eventbrite.com.br/e/python-nordeste-2023-tickets-685066200447 " target="_blank"
                     class="btn-subscriptions">
@@ -85,7 +84,7 @@
                 <a href="https://pretalx.com/python-nordeste-2023/schedule/" target="_blank" class="btn-c4p">Cronograma
                     do evento</a>
             </div>
-        </section>
+        </div>
     </header>
 
     <main>
