feat: adicionando a logo da Botcity

--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
             <h4>Ouro</h4>
             <div class="sponsors-list__ouro">
                 <img src="./img/assets/elastic.png" alt="Elastic" />
+                <img src="./img/assets/botcity.png" alt="Botcity" />
             </div>
             <h4>Bronze</h4>
             <div class="sponsors-list__bronze">
