--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/main.css">
+
     <!-- Fonts / Styles -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -68,11 +69,13 @@
     </nav>
 
     <header class="header">
-        <img class="header--hero" src="./img/assets/poli-atual.jpg"
+        <img class="header__hero" src="./img/assets/poli-atual.jpg"
             aria-label="Fitas voando escrito Python Nordeste 2023">
-        <div class="header--intro">
-            <h1 class="main--descricao-callout">22 a 24 de setembro de 2023</h1>
-            <p><b>Escola Politécnica da UFBA - R. Prof. Aristídes Novis, 2 - Federação, Salvador - BA, 40210-630
+        <div class="header__intro">
+            <h1 class="header__callout__heading">Python Nordeste 2023</h1>
+            <h2 class="header__callout__subheading">22 a 24 de setembro de 2023</h2>
+            <p class="header__callout__address"><b>Escola Politécnica da UFBA - R. Prof. Aristídes Novis, 2 - Federação,
+                    Salvador - BA, 40210-630
                 </b></p>
             <div class="c4p">
                 <a href="https://www.eventbrite.com.br/e/python-nordeste-2023-tickets-685066200447 " target="_blank"
@@ -87,13 +90,17 @@
         </div>
     </header>
 
-    <main>
-        <article class="intro" id="intro">
-            <div class="intro--descricao">
-                <h2>Conheça mais sobre a cidade-sede da PyNE 2023!</h2>
-                <section class="intro-cidade">
-                    <p class="intro-cidade--callout">
-                        A PyNE este ano será sediada em Salvador, capital e maior cidade da Bahia.
+    <!-- <main> -->
+    <div class="intro" id="intro">
+
+        <div class="intro__wrapper">
+            <h2 class="intro__headline">Conheça mais sobre Salvador!</h2>
+
+            <include src="carousel.html" frameborder="0"></include>
+            <div class="intro__container">
+                <div class="intro__descritpion">
+                    <p>
+                        A cidade-sede da Python Nordeste 2023 será em Salvador, capital e maior cidade da Bahia.
                     </p>
                     <p>
                         Considerada o centro da cultura afro-brasileira no Brasil. O território soteropolitano
@@ -123,11 +130,12 @@
                         cidades mais conectadas
                         e inteligentes do País.
                     </p>
-                </section>
+                </div>
             </div>
+        </div>
         </article>
-        <article class="sponsor bg-white" id="sponsor">
-            <h2>Seja uma patrocinadora da Python Nordeste</h2>
+        <div class="sponsor bg-white" id="sponsor">
+            <h2>Seja uma empresa patrocinadora da Python Nordeste</h2>
             <div class="sponsor--section">
                 <section lang="pt-br" class="sponsor-texto">
                     <h3>Junte-se a nós para construir este evento!</h3>
@@ -151,10 +159,10 @@
                     </div>
                 </section>
             </div>
-        </article>
+        </div>
 
         <article class="sponsors-list bg-white">
-            <h3>Confira as empresas patrocinadoras!</h3>
+            <h3>Confira as nossas patrocinadoras e apoiadoras!</h3>
             <h4>Ouro</h4>
             <div class="sponsors-list__ouro">
                 <img src="./img/assets/elastic.png" alt="Elastic" />
@@ -184,8 +192,8 @@
             </section>
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3887.56535363496!2d-38.512876424041686!3d-12.999628560375259!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x716049dd45f3533%3A0x6e449a7096d9e5e0!2sEscola%20Polit%C3%A9cnica%20da%20UFBA!5e0!3m2!1spt-BR!2sbr!4v1685062528945!5m2!1spt-BR!2sbr"
-                width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
+                width="400" height="300" style=" border: 10px double #f7931e; outline: 10px double #299BA6;"
+                allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </article>
         <article class="social-media" id="social-media">
             <h3 class="social-media--text-center">
@@ -219,12 +227,14 @@
                 </li>
             </ul>
         </article>
-    </main>
-    <footer class="footer">
-        <small class="footer--note">
-            22 a 24 de setembro de 2023 | Salvador - BA, Brasil | Feito com <3 pelos pythonistas nordestinos </small>
-    </footer>
-    <script src="js/scripts.js"></script>
+        <!-- </main> -->
+        <footer class="footer">
+            <small class="footer--note">
+                22 a 24 de setembro de 2023 | Salvador - BA, Brasil | Feito com <3 pelos pythonistas nordestinos
+                    </small>
+        </footer>
+        <script src="js/scripts.js"></script>
+        <script src="https://unpkg.com/htmlincludejs"></script>
 </body>
 
 </html>
