feat: refactor and new hero

--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE html>
-<!--
-    Python Nordeste 2022
-    Pessoas > Tecnologia
-    ✊🏿✊🏾✊🏽✊✊🏼✊🏻 🏳️‍🌈🏳️‍⚧️♿
--->
 <html lang="pt-BR" xmlns="http://www.w3.org/1999/html">
 
 <head>
@@ -23,21 +18,18 @@
     <!-- Primary Meta Tags -->
     <title>PyNE23 | Python Nordeste 2023 | Salvador - BA, Brasil | Em Setembro</title>
     <meta name="title" content="PyNE23 | Python Nordeste 2023 | Salvador - BA, Brasil | Em Setembro">
-    <meta name="description"
-        content="A edição da Python Nordeste multicultural e com sotaque soteropolitano. Da comunidade, para a comunidade.">
+    <meta name="description" content="PyNE23 | Python Nordeste 2023 | Salvador - BA, Brasil | Em Setembro">
     <!-- Open Graph / Facebook Meta Tags -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://2023.pythonbrasil.org.br/">
+    <meta property="og:url" content="https://2023.pythonnordeste.org/">
     <meta property="og:title" content="PyNE23 | Python Nordeste 2023 | Salvador - BA, Brasil | Em Setembro">
-    <meta property="og:description"
-        content="A edição da Python Nordeste multicultural e com sotaque soteropolitano. Da comunidade, para a comunidade.">
+    <meta property="og:description" content="PyNE23 | Python Nordeste 2023 | Salvador - BA, Brasil | Em Setembro">
     <meta property="og:image" content="img/miniatura_website.jpg">
     <!-- Twitter Meta Tags -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://2023.pythonbrasil.org.br/">
+    <meta property="twitter:url" content="https://2023.pythonnordeste.org/">
     <meta property="twitter:title" content="PyNE23 | Python Nordeste 2023 | Salvador - BA, Brasil | Em Setembro">
-    <meta property="twitter:description"
-        content="A edição da Python Nordeste multicultural e com sotaque soteropolitano. Da comunidade, para a comunidade.">
+    <meta property="twitter:description" content="PyNE23 | Python Nordeste 2023 | Salvador - BA, Brasil | Em Setembro">
     <meta property="twitter:image" content="img/miniatura_website.jpg">
     <!-- Icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
@@ -64,26 +56,29 @@
         <a class="nav-link" href="#sponsor">Como patrocinar</a>
         <a class="nav-link" href="cdc.html" target="_blank">Código de conduta</a>
         <a class="nav-link" href="#social-media">Redes sociais</a>
-        <a class="nav-link" href="orientacoes.html">Orientações para a Covid-19</a>
+        <a class="nav-link" href="orientacoes.html" target="_blank">Orientações para a Covid-19</a>
         <a class="icon" href="javascript:void(0);" onclick="myFunction()"><i class="iconoir-menu"></i></a>
     </nav>
 
     <header class="header">
-        <img class="header__hero" src="./img/assets/poli-atual.jpg"
+        <img class="header__hero" src="./img/assets/hero_pyne2023.png"
             aria-label="Fitas voando escrito Python Nordeste 2023">
         <div class="header__intro">
             <h1 class="header__callout__heading">Python Nordeste 2023</h1>
-            <h2 class="header__callout__subheading">22 a 24 de setembro de 2023</h2>
-            <p class="header__callout__address"><b>Escola Politécnica da UFBA - R. Prof. Aristídes Novis, 2 - Federação,
+            <h2 class="header__callout__subheading"><i class="iconoir-calendar"></i><br>22 a 24 de setembro de 2023</h2>
+            <p class="header__callout__address"><i class="iconoir-pin-alt"></i>
+                <br><b>Escola Politécnica da UFBA - R.
+                    Prof. Aristídes Novis, 2 - Federação,
                     Salvador - BA, 40210-630
-                </b></p>
-            <div class="c4p">
+                </b>
+            </p>
+            <div class="header__c4p">
                 <a href="https://www.eventbrite.com.br/e/python-nordeste-2023-tickets-685066200447 " target="_blank"
                     class="btn-subscriptions">
                     Inscreva-se já!
                 </a>
             </div>
-            <div class="c4p">
+            <div class="header__c4p">
                 <a href="https://pretalx.com/python-nordeste-2023/schedule/" target="_blank" class="btn-c4p">Cronograma
                     do evento</a>
             </div>
@@ -134,50 +129,56 @@
             </div>
         </div>
         </article>
-        <div class="sponsor bg-white" id="sponsor">
+        <div class="sponsor" id="sponsor">
             <h2>Seja uma empresa patrocinadora da Python Nordeste</h2>
             <div class="sponsor--section">
                 <section lang="pt-br" class="sponsor-texto">
                     <h3>Junte-se a nós para construir este evento!</h3>
                     <p>Não deixe de conferir o nosso Plano de Patrocínio!</p>
-                    <div class="c4p">
+                    <section class="c4p">
                         <a href="https://drive.google.com/file/d/1mpw3NoA-tizdEWYbKxWLciw9cm0TgZ9X/view?usp=share_link"
                             target="_blank" class="btn-c4p">
                             Baixar o PDF
                         </a>
-                    </div>
+                    </section>
                 </section>
 
                 <section lang="en-us" class="sponsor-texto">
                     <h3>Become a sponsor of Python Nordeste</h3>
                     <p>Check out our Sponsorship Plan!</p>
-                    <div class="c4p">
+                    <section class="c4p">
                         <a href="https://drive.google.com/file/d/17qei9Stdsef0Sxz8pZvYFZD6JmY85gKN/view" target="_blank"
                             class="btn-c4p">
                             Download PDF file
                         </a>
-                    </div>
+                    </section>
                 </section>
             </div>
         </div>
 
-        <article class="sponsors-list bg-white">
+        <article class="sponsors-list">
             <h3>Confira as nossas patrocinadoras e apoiadoras!</h3>
             <h4>Ouro</h4>
             <div class="sponsors-list__ouro">
-                <img src="./img/assets/elastic.png" alt="Elastic" />
+                <a href="https://www.elastic.co/pt/about" class="sponsor-list"><img src="./img/assets/elastic.png"
+                        alt="Elastic" /></a>
             </div>
             <h4>Bronze</h4>
             <div class="sponsors-list__bronze">
-                <img src="./img/assets/globo.png" alt="Globo" />
-                <img src="./img/assets/vinta.png" alt="Vinta" />
+                <a href="https://www.globo.com/" class="sponsor-list"><img src="./img/assets/globo.png"
+                        alt="Globo" /></a>
+                <a href="https://www.vinta.com.br/" class="sponsor-list"><img src="./img/assets/vinta.png"
+                        alt="Vinta" /></a>
             </div>
             <div class="sponsors-list__apoiadores">
                 <h4>Apoiadores</h4>
                 <div class="sponsors-flex">
-                    <img src="./img/assets/ufba.png" alt="UFBA" />
-                    <img src="./img/assets/naep.png" alt="NAEP" />
-                    <img src="./img/assets/gamma-ufba.png" alt="GAMMA">
+                    <a href="https://www.eng.ufba.br/" class="sponsors-flex"><img src="./img/assets/ufba.png"
+                            alt="UFBA" /></a>
+                    <a href="https://www.instagram.com/cienciadedadosnaep/" class="sponsors-flex"><img
+                            src="./img/assets/naep.png" alt="NAEP" /></a>
+                    <a href="https://gamma-ufba.github.io/index.html" class="sponsors-flex"><img
+                            src="./img/assets/gamma-ufba.png" alt="GAMMA"></a>
                 </div>
             </div>
         </article>
@@ -195,45 +196,41 @@
                 width="400" height="300" style=" border: 10px double #f7931e; outline: 10px double #299BA6;"
                 allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </article>
-        <article class="social-media" id="social-media">
-            <h3 class="social-media--text-center">
-                Siga-nos nas nossas redes:
-            </h3>
-            <ul>
-                <li>
-                    <a href="mailto:nordeste@python.org.br" target="_blank" rel="noopener noreferrer">
-                        <img class="social-media--icons" src="./img/icons/EMAIL.svg" alt="Email" />
-                        nordeste@python.org.br
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.instagram.com/pythonnordeste/" target="_blank" rel="noopener noreferrer">
-                        <img class="social-media--icons" src="./img/icons/INSTAGRAM.svg" alt="Instagram" />
-                        @pythonnordeste
-                    </a>
-                </li>
-                <li>
-                    <a href="https://twitter.com/pythonnordeste" target="_blank" rel="noopener noreferrer">
-                        <img class="social-media--icons" src="./img/icons/TWITTER.svg" alt="Twitter" />
-                        @pythonnordeste
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.linkedin.com/company/python-nordeste-2022/" target="_blank"
-                        rel="noopener noreferrer">
-                        <img class="social-media--icons" src="./img/icons/LINKEDIN.svg" alt="Linkedin" />
-                        /PythonNordeste
-                    </a>
-                </li>
-            </ul>
-        </article>
-        <!-- </main> -->
-        <footer class="footer">
-            <small class="footer--note">
-                22 a 24 de setembro de 2023 | Salvador - BA, Brasil | Feito com <3 pelos pythonistas nordestinos
-                    </small>
+        <footer>
+            <div class="footer__social">
+
+                <div class="social-media" id="social-media">
+                    <div class="social-media__list">
+                        <a href="mailto:nordeste@python.org.br" target="_blank" rel="noopener noreferrer">
+                            <img class="social-media--icons" src="./img/icons/EMAIL.svg" alt="Email" />
+                            <!-- nordeste@python.org.br -->
+                        </a>
+                        <a href="https://www.instagram.com/pythonnordeste/" target="_blank" rel="noopener noreferrer">
+                            <img class="social-media--icons" src="./img/icons/INSTAGRAM.svg" alt="Instagram" />
+                        </a>
+                        <a href="https://twitter.com/pythonnordeste" target="_blank" rel="noopener noreferrer">
+                            <img class="social-media--icons" src="./img/icons/TWITTER.svg" alt="Twitter" />
+                        </a>
+                        <a href="https://www.linkedin.com/company/python-nordeste-2022/" target="_blank"
+                            rel="noopener noreferrer">
+                            <img class="social-media--icons" src="./img/icons/LINKEDIN.svg" alt="Linkedin" />
+                        </a>
+
+                    </div>
+                    <div class="footer__footnote">
+                        <a class="footer__footnote" href="mailto:nordeste@python.org.br">
+                            <p>nordeste@python.org.br</p>
+                        </a>
+                        <hr>
+                        <small class="footer__note">
+                            22 a 24 de setembro de 2023 | Salvador - BA, Brasil | Feito com <3 por pythonistas
+                                nordestinos </small>
+                    </div>
+                </div>
+
+                <script src="js/scripts.js"></script>
+            </div>
         </footer>
-        <script src="js/scripts.js"></script>
         <script src="https://unpkg.com/htmlincludejs"></script>
 </body>
 
