fix: minor fixes

--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
         <input type="checkbox" id="nav-check">
         <div class="nav-header">
             <div class="nav-title">
-                <img class="nav-logo" src="./img/assets/LOGO.png" alt="">
+                <a href="#" class="logo">
+                    <img class="nav-logo" src="./img/assets/LOGO.png" alt="">
+                </a>
             </div>
         </div>
         <div class="nav-btn">
@@ -65,10 +67,13 @@
 
         <div class="nav-links">
             <a href="#intro">Sobre a cidade</a>
+            <a href=" https://www.eventbrite.com.br/e/python-nordeste-2023-tickets-685066200447 "
+                target=" _blank">Inscrições</a>
+            <a href="https://pretalx.com/python-nordeste-2023/schedule/" target="_blank">Grade de palestras</a>
             <a href="#sponsor">Como patrocinar</a>
             <a href="cdc.html" target="_blank">Código de conduta</a>
             <a href="#social-media">Redes sociais</a>
-            <a href="orientacoes.html" target="_blank">Orientações para a Covid-19</a>
+            <a href="orientacoes.html">Orientações para a Covid-19</a>
         </div>
     </nav>
 
@@ -79,11 +84,13 @@
             <h1 class="header__callout__heading">Python Nordeste 2023</h1>
             <h2 class="header__callout__subheading"><br>22 a 24 de setembro de 2023</h2>
             <p class="header__callout__address">
-                <br><b>Escola Politécnica da UFBA - R.
+                <a href="https://goo.gl/maps/QmuKpDPjvXigJ9rV8"><br><b></b>Escola Politécnica da UFBA - R.
                     Prof. Aristídes Novis, 2 - Federação,
                     Salvador - BA, 40210-630
-                </b>
+                    </b>
             </p>
+            </a>
+
             <div class="header__c4p">
                 <a href="https://www.eventbrite.com.br/e/python-nordeste-2023-tickets-685066200447 " target="_blank"
                     class="btn-subscriptions">
